--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wix-rehab",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Wix Rehab integration testing framework",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
