--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@testing-library/react-hooks": "^3.3.0",
     "jest-diff": "25.4.0",
     "react-component-driver": "^0.10.0",
     "react-test-renderer": "^16.13.1",
