--- a/example/package.json
+++ b/example/package.json
@@ -1,49 +1,32 @@
 {
-  "name": "wix-rehab-example-module",
-  "version": "1.0.0",
-  "description": "Wix Rehab Example Module",
-  "main": "index.js",
+  "name": "example",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "jest"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/runtime": "^7.10.2",
-    "babel-jest": "^26.0.1",
-    "jest": "^26.0.1",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "wix-one-app-engine": "^20.0.0-rc2"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-native": "^0.62.2"
+    "react": "16.13.1",
+    "react-native": "0.63.1",
+    "react-native-navigation": "^6.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.5.4",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
+    "rehabjs": "^0.1.2"
   },
   "jest": {
-    "verbose": true,
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    },
     "preset": "react-native",
-    "testPathIgnorePatterns": [
-      "/e2e/",
-      "/node_modules/"
-    ],
-    "testMatch": [
-      "**/?(*.)(spec|test|it).(ts|tsx|js|jsx)"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/jest/fileMapper.js"
-    },
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!wix-react-native-ui-lib|react-native-ui-lib|react-native|react-native-navigation)"
-    ]
+    "transformIgnorePatterns": []
   }
 }
