--- a/examples/with-react-native/package.json
+++ b/examples/with-react-native/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ../../src"
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "16.13.1",
