--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.2",
+    "prettier": "2.0.5",
     "semver": "^7.3.2",
     "shell-utils": "^1.0.10"
   }
