add task in package.json and edit prettier config changes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "cd examples/with-react-native && npm i && npm t",
+    "prettier": "prettier --write ./src/*",
     "build": "babel src --out-dir dist",
     "release": "node scripts/release"
   },
