--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,8 @@
 {
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": false,
-  "printWidth": 160,
-  "overrides": [
-    {
-      "files": "*.js"
-    }
-  ]
+  "printWidth": 160
 }
