--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "cd examples/with-react-native && npm i && npm t",
+    "prettier": "prettier --write ./src/*",
     "build": "babel src --out-dir dist",
     "release": "node scripts/release"
   },
@@ -29,6 +30,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.2",
+    "prettier": "2.0.5",
     "semver": "^7.3.2",
     "shell-utils": "^1.0.10"
   }
