--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,19 @@
 {
   "presets": [
     [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      {
+        targets: {
+          browsers: ['node 10'],
+          node: true,
+        }
+      }
     ]
   ],
   "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+    ],
     [
       "@babel/plugin-proposal-class-properties"
     ]
