--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "@testing-library/react-hooks": "^3.3.0",
-    "jest-diff": "25.4.0",
+    "jest-diff": "^26.0.0",
     "react-component-driver": "^0.10.0",
     "react-test-renderer": "^16.13.1",
     "react-test-renderer-utils": "^2.1.0"
   },
   "peerDependencies": {
-    "jest": "25.4.0",
+    "jest": "^26.0.0",
     "react-native-navigation": "*",
     "lodash": "*",
     "react": "^16.13.1"
@@ -28,8 +29,8 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
-    "@babel/runtime": "^7.10.2",
     "prettier": "2.0.5",
     "semver": "^7.3.2",
     "shell-utils": "^1.0.10"
