--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rehabjs",
   "version": "0.2.0",
   "description": "RehabJS integration testing framework for React and React Native",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "cd examples/with-react-native && npm i && npm t",
     "prettier": "prettier --write ./src/*",
@@ -16,17 +16,27 @@
     "jest-diff": "^26.0.0",
     "react-component-driver": "^0.10.0",
     "react-test-renderer": "^16.13.1",
-    "react-test-renderer-utils": "^2.1.0"
+    "react-test-renderer-utils": "^2.1.0",
+    "typescript": "^4.1.5"
   },
   "peerDependencies": {
     "jest": "^26.0.0",
-    "react-native-navigation": "*",
     "lodash": "*",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "react-native": "*",
+    "react-native-navigation": "*"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-native": "^0.63.50",
+    "@types/react-test-renderer": "^17.0.1",
     "prettier": "2.0.5",
     "semver": "^7.3.2",
-    "shell-utils": "^1.0.10"
+    "shell-utils": "^1.0.10",
+    "ts-jest": "^26.5.1"
   }
 }
